--- a/app/src/main/res/layout/component_numberbuttom.xml
+++ b/app/src/main/res/layout/component_numberbuttom.xml
@@ -7,11 +7,12 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/Mybutton"
+        android:id="@+id/myButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:background="@drawable/shape_capsule"
+        android:textColor="@drawable/red_btn_text_color"
+        android:background="@drawable/red_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
