--- a/app/src/main/res/layout/item_buttons.xml
+++ b/app/src/main/res/layout/item_buttons.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat
+    android:id="@+id/itembutton"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.jap.numbercolor.MyButtonView
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        />
 
     <com.jap.numbercolor.MyButtonView
         android:id="@+id/button2"
