--- a/app/src/main/res/drawable/green_button.xml
+++ b/app/src/main/res/drawable/green_button.xml
@@ -3,7 +3,7 @@
 
     <item android:state_selected="true">
         <shape android:shape="rectangle" >
-            <solid android:color="@android:color/holo_green_dark" />
+            <solid android:color="@color/stop_button_green" />
             <corners android:radius="800dp"/>
             <padding
                 android:bottom="20dp"
@@ -16,7 +16,7 @@
     <!-- 默認時的背景圖片 -->
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color = "#CCFF99"/>
+            <solid android:color = "@color/start_button_green"/>
             <corners android:radius="800dp"/>
             <padding
                 android:bottom="20dp"
