--- a/app/src/main/res/drawable/red_btn_text_color.xml
+++ b/app/src/main/res/drawable/red_btn_text_color.xml
@@ -3,5 +3,5 @@
     <item android:state_selected="true"
         android:color="@android:color/white"/>
     <!-- 默認時的背景文字 -->
-    <item android:color="@android:color/holo_red_light" />
+    <item android:color="@color/stop_button_red" />
 </selector>
