--- a/app/src/main/res/layout/component_numberbuttom.xml
+++ b/app/src/main/res/layout/component_numberbuttom.xml
@@ -13,6 +13,7 @@
         android:gravity="center"
         android:textColor="@drawable/red_btn_text_color"
         android:background="@drawable/red_button"
+        android:textSize="18dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
