modify ui layout_padding

--- a/app/src/main/res/layout/item_buttons.xml
+++ b/app/src/main/res/layout/item_buttons.xml
@@ -11,6 +11,7 @@
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:layout_weight="1"
         />
 
@@ -18,24 +19,28 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:layout_weight="1"/>
 
     <com.jap.numbercolor.MyButtonView
-    android:id="@+id/button3"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1"/>
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_weight="1"/>
 
     <com.jap.numbercolor.MyButtonView
-    android:id="@+id/button4"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1"/>
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_weight="1"/>
 
     <com.jap.numbercolor.MyButtonView
-    android:id="@+id/button5"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1"/>
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_weight="1"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
