--- a/app/src/main/res/layout/component_numberbuttom.xml
+++ b/app/src/main/res/layout/component_numberbuttom.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
-    android:layout_height="match_parent">
+    >
 
     <Button
         android:id="@+id/myButton"
@@ -13,12 +14,13 @@
         android:gravity="center"
         android:textColor="@drawable/red_btn_text_color"
         android:background="@drawable/red_button"
-        android:textSize="18dp"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         >
+
     </Button>
 
 </merge>
