--- a/app/src/main/res/drawable/blue_button.xml
+++ b/app/src/main/res/drawable/blue_button.xml
@@ -3,7 +3,11 @@
 
     <item android:state_selected="true">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/stop_button_blue" />
+<!--            <solid android:color="@color/stop_button_blue" />-->
+            <gradient
+                android:angle="90"
+                android:startColor="@color/stop_button_blue"
+                android:endColor="@color/start_button_blue"/>
             <corners android:radius="800dp"/>
             <padding
                 android:bottom="20dp"
