--- a/app/src/main/res/drawable/red_button.xml
+++ b/app/src/main/res/drawable/red_button.xml
@@ -3,8 +3,12 @@
 
     <item android:state_selected="true">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/stop_button_red" />
+<!--            <solid android:color="@color/stop_button_red" />-->
             <corners android:radius="800dp"/>
+            <gradient
+                android:angle="90"
+                android:startColor="@color/stop_button_red"
+                android:endColor="@color/start_button_red"/>
             <padding
                 android:bottom="20dp"
                 android:left="20dp"
