--- a/app/src/main/res/layout/item_buttons.xml
+++ b/app/src/main/res/layout/item_buttons.xml
@@ -4,14 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="horizontal">
 
     <com.jap.numbercolor.MyButtonView
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="12dp"
         android:layout_weight="1"
         />
 
@@ -19,28 +18,28 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="12dp"
         android:layout_weight="1"/>
 
     <com.jap.numbercolor.MyButtonView
         android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="12dp"
         android:layout_weight="1"/>
 
     <com.jap.numbercolor.MyButtonView
         android:id="@+id/button4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="12dp"
         android:layout_weight="1"/>
 
     <com.jap.numbercolor.MyButtonView
         android:id="@+id/button5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="12dp"
         android:layout_weight="1"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
